Only render text track cues if kind=captions or kind=subtitles. https://bugs.webkit.org/show_bug.cgi?id=83321

Reviewed by Eric Carlson.

Source/WebCore:

No new tests. Modification to media/track/track-kind.html

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::textTrackKindChanged):
   If the kind changes from a 'visible' kind to a 'non-visible' kind,
   update the track's mode to HIDDEN.

* html/shadow/MediaControlElements.cpp:
(WebCore::MediaControlTextTrackContainerElement::updateDisplay):
    Do not render cues from tracks that are not captions or subtitles.

* html/track/TextTrack.cpp:
(WebCore::TextTrack::setMode):
    If the track's mode changes from SHOWING to HIDDEN or DISABLED,
    ensure any currently visible cues will no longer be rendered.

* html/track/TextTrackCue.cpp:
(WebCore::TextTrackCue::removeDisplayTree): New method.
* html/track/TextTrackCue.h:
(TextTrackCue):

LayoutTests:

* media/track/track-kind-expected.txt:
* media/track/track-kind.html:


Canonical link: https://commits.webkit.org/104700@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@117811 268f45cc-cd09-0410-ab3c-d52691b4dbfc